# todo-app

./: .gitignore  README.md  pyproject.toml
Phase II/: ENV_VALIDATION_FIX.md  ERROR_FIXES.md
Phase_I/: .gitignore
Phase_II/: .gitignore  CONNECTIVITY_FIX.md  IMPLEMENTATION_STATUS.md
Phase_III/: .gitignore  README.md
Phase_V/backend/: .gitignore  pyproject.toml  requirements.txt
Phase_V/backend/alembic/versions/: 002_add_priority_field.py  004_add_tags_tables.py  005_add_recurring_task_tables.py  006_add_reminders_table.py  007_add_event_log_table.py  008_add_task_fts_index.py
Phase_V/backend/docs/: TEXT_PARSING_MODE.md
Phase_V/backend/scripts/: test_models.py
Phase_V/backend/src/: config.py  main.py
Phase_V/backend/src/agents/api/: __init__.py  agent_handler.py  agent_routes.py  serializers.py
Phase_V/backend/src/agents/config/: agent_config.py
Phase_V/backend/src/agents/core/: agent.py
Phase_V/backend/src/agents/mcp/: mcp_tools.py
Phase_V/backend/src/api/v1/: auth.py  notifications.py  recurring.py  reminders.py  router.py  tags.py  tasks.py
Phase_V/backend/src/auth/: README.md  dependencies.py
Phase_V/backend/src/mcp/: README.md
Phase_V/backend/src/mcp/client/: backend_client.py
Phase_V/backend/src/models/: __init__.py  event_log.py  recurring.py  reminder.py  tag.py  task.py
Phase_V/backend/src/schemas/: task.py
Phase_V/backend/src/services/: conversation_service.py  dapr_jobs.py  dapr_pubsub.py  dapr_secrets.py  message_service.py  recurring_task_service.py  reminder_service.py  rrule_service.py  tag_service.py  task_service.py
Phase_V/backend/tests/: test_e2e_jwt_flow.py  test_jwt_authorization.py
Phase_V/backend/tests/agents/: test_agent_api.py  test_agent_integration.py  test_message_service.py  verify_task_deletion.py  verify_task_update.py
Phase_V/backend/tests/mcp/: verify_complete_task.py  verify_list_tasks.py  verify_update_task.py
Phase_V/backend/tests/unit/: test_task_service.py
(+717 files in other folders)
